RESOLVED FIXED128034
Text interaction assistant is not deleted when dismissing the keyboard on iPad
https://bugs.webkit.org/show_bug.cgi?id=128034
Summary Text interaction assistant is not deleted when dismissing the keyboard on iPad
Enrica Casucci
Reported 2014-01-31 19:00:08 PST
The delegate accessoryDone is only called for iPhone.
Attachments
Patch (1.84 KB, patch)
2014-01-31 19:09 PST, Enrica Casucci
mitz: review+
Enrica Casucci
Comment 1 2014-01-31 19:09:10 PST
Enrica Casucci
Comment 2 2014-02-01 16:05:33 PST
Committed revision 163250.
Note You need to log in before you can comment on or make changes to this bug.